solved flickering on Safari

--- a/css/less/custom/_variables.less
+++ b/css/less/custom/_variables.less
@@ -88,5 +88,6 @@
 @small-mobile:			  479px;
 @mobile:				  591px;
 @phablet:			      767px;
-@tablet:				  980px;
+//@tablet:				  980px;
+@mobile:				  980px;
 @desktop:				  1200px;  
